--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "^18.3.2",
+        "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
     },
     "dependencies": {
-        "antd": "^5.19.0"
+        "@ant-design/icons": "^5.3.7",
+        "@inertiajs/react": "^1.0.16",
+        "antd": "^5.19.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
